--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -55,13 +55,20 @@
 * **주요기능 및 설명**
 
   ```
-  
+  '스뮤힐'의 주요기능은 크게 3가지로 챗봇빌딩 기능, 권한 기능, 템플릿 기능이 있다.
+  첫번째로 챗봇빌딩 기능은 챗봇을 구현할 수 있는 챗봇 빌더의 플랫폼을 보다 직관적으로 이해하고 사용할 수 있게끔, 유저 편의성에 관점을 두고 구현하고자 하는 기능이다.
+  두번째로 권한 기능은 특정 챗봇에 마스터 권한을 가지고 있는 사람이 해당 챗봇을 수정 및 관리를 하는 사람들마다 영역별로 권한을 부여해 권한이 부여된 영역 내에서만 챗봇을 수정 및 관리를 할수 있는 기능이다.
+  마지막으로 템플릿 기능은 '스뮤힐' 챗봇빌더가 캠퍼스 챗봇 빌더라는 특정 분야에 전문성을 가지는 만큼, 대학교와 같은 단체에서 주로 구현하고 사용하는 특정 기능들을 템플릿 형태로 미리 구현해 폼(form)형태로 사용자에게 제공해 보다 쉽게 챗봇을 빌딩할수 있게하는 기능이다.
   ```
 
 * **적용기술**
 
   ```
-  
+  '스뮤힐' 챗봇 빌더는 웹 형태로 사용자에게 제공되기에, 
+  웹 페이지(프론트엔드)를 구현하기 위한 HTML, CSS, JS와 같은 기술들이 사용되었고
+  사용자 계정정보 및 구현중인 챗봇 빌더의 형태를 저장하고 불러오는 등의 DB 기능을 구현하기 위해
+  Node.js, ERS, AWS 서버와 같은 기술을 사용했다.
+  그리고 svg내에 챗봇 빌더의 flowchart를 구현하기 위해서 jsPlumb 라이브러리를 사용했다.
   ```
 
 * **예상 결과물**
