--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -1,4 +1,4 @@
-# 중간보고서
+﻿# 중간보고서
 
 ### 1. 프로젝트 개요
 
@@ -25,18 +25,29 @@
   **1) 최종개발 목표**
 
   ```
+  '스뮤힐'은 최종적으로 누구나 쉽게 챗봇을 만들 수 있는 것을 목표로 한다. 웹 앱으로 제작된 '스뮤힐'은 대학을 다니는 사람은 누구나 인증을 통하여 자신이 속한 대학의 챗봇을 제작 할 수 있다. 더 나아가 챗봇 제작
+  중간중간 자신이 제작한 챗봇을 테스트 할 수 있는 미리보기 기능을 제공하여 편의성을 증가 시킬 수 있다. 인터페이스와 기능의 편의성을 추구하여 학생의 참여도를 높이는 것이 목표이고, 참여하는 대학들의 커뮤니티가
+  활발해지도록 하는것이다. 캠퍼스뿐만 아니라 초,중,고등학교, 기업, 단체에서도 활용이 가능하다. 
   
   ```
 
   **2) 주요 개발내용(기능중심)**
 
   ```
-  
+  1. 템플릿을 제공하여 사용자가 간단한 입력만으로 시나리오를 작성할 수 있으며 템플릿끼리 드래그하여 연결하면 템플릿안의 입력값도 계층적으로 구성된다.
+  2. 사용자가 웹에서 입력한 값을 데이터로 저장하여 메시징 플랫폼과 연동시켜 플랫폼에 맞는 챗봇을 만들 수 있다. 이로써 같은 데이터로 여러 플랫폼과 연동할 수 있다.
+. 3. 소속된 대학의 이메일로 인증을 받은 사용자는 챗봇 빌더에 로그인 할 수 있으며 부여받은 권한에 따라 챗봇 제작에 관여할 수 있는 부분이 다르다.
+  4. 템플릿간의 관계를 드래그 가능한 플로우차트 형식으로 만들 수 있어 시각적으로 이해하기 편리하다.		  
+  5. 웹상에 채팅 기능을 구현하여 사용자들끼리 실시간으로 대화가 가능하다.
   ```
 
   **3) 기존 기술 활용여부 및 차별성**
 
   ```
+  기존의 챗봇 빌더는 많이 존재하지만 아무리 간단하더라도 약간의 코딩과 API에 대한 지식이 필요하다. '스뮤힐'은 그 점을 보완하여 누구나 쉽게 사용할 수 있는 챗봇 빌더를 추구한다. 또한 캠퍼스에 특화된 챗봇을 만들기 위한 
+  챗봇 빌더는 없기 때문에 정보 교류가 활발한 대학생들의 활용도가 높을 것이다.동적인 웹을 위해 여러 자바스크립트 라이브러리를 사용하며 SVG를 사용하여 그래픽적인 부분을 보완한다.
+  기존의 챗봇 빌더는 여러명이 제작 중 일 때 겹치는 부분이 생길 수 있지만 '스뮤힐'은 제작 중 인 부분은 접근하지 못하도록 하여 겹치는 일이 생기지 못하게 한다. 더 나아가 챗봇의 제작 기록들을 저장하여 인수인계 등에 
+  유용하게 쓰일 수 있다. 
   
   ```
 
