--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -1,12 +1,13 @@
-﻿# 중간보고서
+# 중간보고서
 
 ### 1. 프로젝트 개요
 
 - **프로젝트 소개**
   ```
-  프로젝트 소개
-  
-  
+   본 프로젝트는 대학교에서 사용하는 챗봇을 개발자가 아닌 일반 사용자도 쉽고 빠르게 챗봇을 제작할 수 있도록 지원하는 ‘캠퍼스 챗봇 빌더’이다.
+  오늘날 많은 대학교에서는 챗봇을 사용하여 학생들에게 학사정보, 성적정보, 시험정보 등 캠퍼스 생활에 필요한 다양한 정보를 제공하고 있다. 하지만 대학교에서 쓰이는 챗봇 빌더는 해마다 바뀌는 관리자 때문에 정보의 최신화가 잘 이루어지지 않고 있고, 동아리 챗봇, 총학생회 챗봇, 과 학생회 챗봇으로 나누어져 있어 사용자가 정보를 얻는데 불편함이 있다.
+  이러한 불편함을 개선하여 챗봇 사용자가 항상 최신화되어 있고 통합된 하나의 챗봇으로 정보를 얻을 수 있는 챗봇을 제작하는 챗봇 빌더를 개발하고자 한다.
+
   ```
 
 - **추진배경 및 필요성**
@@ -18,6 +19,7 @@
 - **국내, 외 기술 현황**
 
   ```
+  
   
   ```
 
