--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -4,23 +4,28 @@
 
 - **프로젝트 소개**
   ```
-   본 프로젝트는 대학교에서 사용하는 챗봇을 개발자가 아닌 일반 사용자도 쉽고 빠르게 챗봇을 제작할 수 있도록 지원하는 ‘캠퍼스 챗봇 빌더’이다.
-  오늘날 많은 대학교에서는 챗봇을 사용하여 학생들에게 학사정보, 성적정보, 시험정보 등 캠퍼스 생활에 필요한 다양한 정보를 제공하고 있다. 하지만 대학교에서 쓰이는 챗봇 빌더는 해마다 바뀌는 관리자 때문에 정보의 최신화가 잘 이루어지지 않고 있고, 동아리 챗봇, 총학생회 챗봇, 과 학생회 챗봇으로 나누어져 있어 사용자가 정보를 얻는데 불편함이 있다.
-  이러한 불편함을 개선하여 챗봇 사용자가 항상 최신화되어 있고 통합된 하나의 챗봇으로 정보를 얻을 수 있는 챗봇을 제작하는 챗봇 빌더를 개발하고자 한다.
-
+  본 프로젝트는 기존에 인터넷을 통해 학교 홈페이지에 접속을 해야만 알 수 있는 학교식당 메뉴, 교무처 번호, 학사일정과 같은 학교의 정보와 동아리 모집 일정, 동아리 행사, 총학생회 행사, 학교 축제 일정 등 학교 단체들의 정보들을 제공하는 챗봇을 만들 수 있도록 도와주는 ‘캠퍼스 챗봇 빌더’이다.
+  캠퍼스 챗봇 빌더를 통해 만든 챗봇은 학교 홈페이지에서 제공하는 공지사항, 학사일정, 학식 메뉴, 전화번호와 같은 정보들을 질문 할 때 카카오톡, 페이스북 메시지와 같은 메시징 플랫폼(Messaging Platform)을 통해 챗봇을 사용하는 학생들에게 제공한다. 
+  학교내 단체(총학생회, 과학생회, 동아리등)별 권한을 가진 사용자가 단체소개, 공지사항, 일정과 같은 유동적인 정보들을 챗봇 빌더를 통해 쉽게 추가, 수정, 삭제 할 수 있다.
+  사용자는 챗봇 빌더에서 자체적으로 제공하는 템플릿(Template)을 통해 챗봇을 보다 간편하게 개발할 수 있다.
+  
   ```
 
 - **추진배경 및 필요성**
 
   ```
+  학사일정과 같은 대부분의 학교 정보를 얻기 위해서는 홈페이지를 통해 정보를 얻어야 하는 불편함을 개선하기 위해 메신저(Messanger)를 통한 질문으로 필요한 정보를 얻을 수 있는 챗봇이 필요했다. 
+  기존 학교 단체에서 운영 중인 챗봇들은 총학생회 챗봇, 동아리 챗봇들 등으로 나누어져 있어 사용자들이 정보를 얻기 힘들다는 단점과 해마다 바뀌는 관리자 때문에 정보의 최신화가 되고 있지 않다는 단점이 있었다.
+  본 챗봇빌더를 통해 챗봇을 제작할 때 비전공자도 접근하기 용이하여 총학생회, 동아리, 과학생회와 같은 단체들의 정보를 본 챗봇 빌더를 통해 쉽게 제작, 수정 가능하게 하여 궁극적으로 한 개의 챗봇으로 운영해 간단히 사용자에게 정보를 제공할 수 있다. 
   
   ```
 
 - **국내, 외 기술 현황**
 
   ```
+  국내 챗봇 빌더에는 '봇그리다', '카카오 i 오픈빌더', 'danbee.Ai'가 있었으며, 해외 챗봇 빌더에는 'Chatfuel', 'Dialogflow', 'ManyChat' 등이 있었다. 국내 챗봇 빌더인 danbee.AI는 우리가 개발하고자 하는 챗봇 빌더인 '스뮤힐'과 몇 가지 유사한 점이 있었다. 미리보기 기능, Parameter를 통한 쉬운 시나리오 제작과 같은 유사한 부분이 있었으나, '스뮤힐'은 캠퍼스에 특화된 템플릿(Template)을 제공한다는 점과 '창작 마당'이라는 기능을 통해 더욱 간편하게 챗봇을 제작할 수 있다는 차이점이 존재했다.
   
-  
+
   ```
 
 - **개발 목표 및 내용**
@@ -100,36 +105,58 @@
 * **계획**
 
   ```
+    시작 월:3월 종료 월: 4월
+    1. 프로젝트 팀 구성 및 아이디어 구상 
+    2. 프로젝트 계획서 작성 및 아이디어 구체화
+    3. 프로젝트 수행 모임 시간/장소 계획
   
   ```
 
 * **분석**
 
   ```
+    시작 월:3월 종료 월: 4월
+    1. 챗봇 빌더 및 챗봇 시장 분석 
+    2. 상용화된 기존 챗봇 빌더와 장단점 분석
+    
   
   ```
 
 * **설계**
 
   ```
+    시작 월:5월 종료 월: 6월
+    1. 기본설계
+    2. 상세기능정의, 구현모델/구조/기능 설계
+    3. DB설계, 프로세스설계 및 기술 검토
   
   ```
 
 * **개발**
 
   ```
-  
+    시작 월: 7월 종료 월: 9월
+    1. S3, EC2 구축 
+    2. 파이썬을 통한 텔레그램 챗봇 제작
+    3. HTML, CSS, JAVASCRIPT를 통한 웹페이지 제작
+    4. DB 설계
   ```
 
 * **테스트**
 
-  ```
+```
+    시작 월: 9월 종료 월: 10월
+    1. 테스트 시나리오 작성 
+    2. 단위테스트 및 디버깅, 통합테스트
   
   ```
 
 * **종료**
 
   ```
+    시작 월: 11월 종료 월: 11월
+    1. 한이음공모전, 최종 결과보고서 작성
+    2. 특허 등록
   
   ```
 
