--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -44,7 +44,7 @@
   ```
   1. 템플릿을 제공하여 사용자가 간단한 입력만으로 시나리오를 작성할 수 있으며 템플릿끼리 드래그하여 연결하면 템플릿안의 입력값도 계층적으로 구성된다.
   2. 사용자가 웹에서 입력한 값을 데이터로 저장하여 메시징 플랫폼과 연동시켜 플랫폼에 맞는 챗봇을 만들 수 있다. 이로써 같은 데이터로 여러 플랫폼과 연동할 수 있다.
-. 3. 소속된 대학의 이메일로 인증을 받은 사용자는 챗봇 빌더에 로그인 할 수 있으며 부여받은 권한에 따라 챗봇 제작에 관여할 수 있는 부분이 다르다.
+  3. 소속된 대학의 이메일로 인증을 받은 사용자는 챗봇 빌더에 로그인 할 수 있으며 부여받은 권한에 따라 챗봇 제작에 관여할 수 있는 부분이 다르다.
   4. 템플릿간의 관계를 드래그 가능한 플로우차트 형식으로 만들 수 있어 시각적으로 이해하기 편리하다.		  
   5. 웹상에 채팅 기능을 구현하여 사용자들끼리 실시간으로 대화가 가능하다.
   ```
