--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -3,29 +3,42 @@
 ### 1. 프로젝트 개요
 
 - **프로젝트 소개**
-  ```
-  본 프로젝트는 기존에 인터넷을 통해 학교 홈페이지에 접속을 해야만 알 수 있는 학교식당 메뉴, 교무처 번호, 학사일정과 같은 학교의 정보와 동아리 모집 일정, 동아리 행사, 총학생회 행사, 학교 축제 일정 등 학교 단체들의 정보들을 제공하는 챗봇을 만들 수 있도록 도와주는 ‘캠퍼스 챗봇 빌더’이다.
-  캠퍼스 챗봇 빌더를 통해 만든 챗봇은 학교 홈페이지에서 제공하는 공지사항, 학사일정, 학식 메뉴, 전화번호와 같은 정보들을 질문 할 때 카카오톡, 페이스북 메시지와 같은 메시징 플랫폼(Messaging Platform)을 통해 챗봇을 사용하는 학생들에게 제공한다. 
-  학교내 단체(총학생회, 과학생회, 동아리등)별 권한을 가진 사용자가 단체소개, 공지사항, 일정과 같은 유동적인 정보들을 챗봇 빌더를 통해 쉽게 추가, 수정, 삭제 할 수 있다.
-  사용자는 챗봇 빌더에서 자체적으로 제공하는 템플릿(Template)을 통해 챗봇을 보다 간편하게 개발할 수 있다.
+  
+  (기존에 썻던대로 말고 좀더 전문적이고 구체적으로 써야됨. 뻔한거는 최대한 줄여쓰고 기능들 설명)
   
   ```
-
+  본 프로젝트를 통해 기존에 학교 홈페이지와 같은 매체를 통해서만 알 수 있는 학사정보와 총학생회, 동아리와 같은 여러 학교 단체들이 정보들을 제공하는 챗봇을 비전공자라도 쉽게 만들 수 있고 이를 통해 학생들이 보다 쉽게 정보들을 접할 수 있게 해주는 ‘캠퍼스 챗봇 빌더(이하 스뮤힐)’ 개발하고자 한다.
+  
+  '스뮤힐'을 이용해 챗봇을 개발하고자 하는 단체들은 직관적이고 유저 친화적인 개발 툴을 이용해 관련 개발지식이 없더라도 쉽게 챗봇을 생성하고 유지보수할 수 있다.
+그리고 캠퍼스 챗봇에 특화된 만큼 챗봇 빌더에서 자체적으로 제공되는 많이 사용하는 폼(form)을 기본적으로 템플릿(Template) 형태로 제공하고, 사람들이 만든 커스텀 폼, 템플릿을 '창작마당'이라는 매체를 통해 공유 할수 있다.
+  
+  또한 유저마다 '권한'기능을 부여해, 하나의 통합된 챗봇이라해도 챗봇 빌더를 사용하는 사람들마다 접근할수 있는 영역을 지정할 수 있다.
+  
+  '스뮤힐'을 이용해 개발된 챗봇은 기존에 단체마다 여러개로 나뉘어져있던 챗봇으로 인해 헷갈려하던 사람들을 하나의 통합된 챗봇으로 제공되고, 쉬운 유지보수로 관리 할수 있는 만큼 사용자들은 접근성이 높은 카카오톡, 페이스북 메시지와 같은 메시징 플랫폼을 통해 원하는 정보를 쉽게 얻을 수 있다.
+  ```
+  
 - **추진배경 및 필요성**
 
   ```
-  학사일정과 같은 대부분의 학교 정보를 얻기 위해서는 홈페이지를 통해 정보를 얻어야 하는 불편함을 개선하기 위해 메신저(Messanger)를 통한 질문으로 필요한 정보를 얻을 수 있는 챗봇이 필요했다. 
-  기존 학교 단체에서 운영 중인 챗봇들은 총학생회 챗봇, 동아리 챗봇들 등으로 나누어져 있어 사용자들이 정보를 얻기 힘들다는 단점과 해마다 바뀌는 관리자 때문에 정보의 최신화가 되고 있지 않다는 단점이 있었다.
-  본 챗봇빌더를 통해 챗봇을 제작할 때 비전공자도 접근하기 용이하여 총학생회, 동아리, 과학생회와 같은 단체들의 정보를 본 챗봇 빌더를 통해 쉽게 제작, 수정 가능하게 하여 궁극적으로 한 개의 챗봇으로 운영해 간단히 사용자에게 정보를 제공할 수 있다. 
+  기존에는 대부분의 학교 정보를 얻기 위해서는 홈페이지에 들어가서 정보를 검색하거나, 학교에 전화를 해 정보를 물어봐야하는 불편함이 있다.
+  또한 학교내 단체가 챗봇을 만들고 싶어도 비교적 난이도 있는 챗봇빌더로 인해 관련 기술자가 없어 만들지 못하거나, 
+  챗봇들을 만들더라도 한 학교내에서도 단체별로 서로 다른 챗봇을 구축하고 있고 이러한 챗봇마저 해마다 바뀌는 관리자로 인해 인수인계가 제대로 되지않는 등의 문제로 정보의 최신화가 되지 않고, 결국 같은 단체에서 새로운 챗봇을 생성하는 등의 문제점이 발생하고 있다.
+  결국 사용자들은 자신이 원하는 정보를 얻기위해서 어떤 단체의 챗봇에 들어가봐야 되는지 모르고, 챗봇을 사용해도 정보의 최신화가 이루어지지 않아 결국 시간낭비를 하고 마는 경우가 발생해 대부분의 학생들이 학교 챗봇을 사용하지 않는다.
   
+  그래서 이러한 문제점들을 해결하기위해 본 프로젝트를 기획하게 되었다.
+  본 챗봇빌더를 통해 
+  
+  **위에꺼보고 작성할것**
+  
+  챗봇을 제작할 때 비전공자도 접근하기 용이하여 총학생회, 동아리, 과학생회와 같은 단체들의 정보를 본 챗봇 빌더를 통해 쉽게 제작, 수정 가능하게 하여 궁극적으로 한 개의 챗봇으로 운영해 간단히 사용자에게 정보를 제공할 수 있다. 
   ```
 
 - **국내, 외 기술 현황**
 
   ```
-  국내 챗봇 빌더에는 '봇그리다', '카카오 i 오픈빌더', 'danbee.Ai'가 있었으며, 해외 챗봇 빌더에는 'Chatfuel', 'Dialogflow', 'ManyChat' 등이 있었다. 국내 챗봇 빌더인 danbee.AI는 우리가 개발하고자 하는 챗봇 빌더인 '스뮤힐'과 몇 가지 유사한 점이 있었다. 미리보기 기능, Parameter를 통한 쉬운 시나리오 제작과 같은 유사한 부분이 있었으나, '스뮤힐'은 캠퍼스에 특화된 템플릿(Template)을 제공한다는 점과 '창작 마당'이라는 기능을 통해 더욱 간편하게 챗봇을 제작할 수 있다는 차이점이 존재했다.
-  
-
+  국내에서 챗봇 빌더는 카카오, 네이버, LG CNS와 같은 대형 IT 서비스 기업에서 '카카오 i 오픈빌더', '  danbee.AI'와 같은 챗봇 빌더를 제공하기 시작했고, '봇그리다'와 같은 챗봇빌더 프레임워크의 서비스 개시를 앞두고 있는등의 챗봇 빌더에 대한 인식을 넓히기 시작했다.
+  해외에서는 이미 'Chatfuel', 'Dialogflow', 'ManyChat' 와 같은 수많은 챗봇빌더를 제공하고 있고, 이 챗봇빌더들은 대부분 페이스북 메세지 챗봇빌더의 기능을 제공하고 있다.
+  우리는 이미 사용가능한 국내 챗봇 빌더와 차별성을 두기 위해 '캠퍼스'라는 특정 사회 그룹에 전문성을 두었고, 이를 템플릿이라는 형태와 관리를 위한 권한 기능을 중점적으로 구현하고자 한다.
   ```
 
 - **개발 목표 및 내용**
@@ -33,13 +46,15 @@
   **1) 최종개발 목표**
 
   ```
-  '스뮤힐'은 최종적으로 누구나 쉽게 챗봇을 만들 수 있는 것을 목표로 한다. 웹 앱으로 제작된 '스뮤힐'은 대학을 다니는 사람은 누구나 인증을 통하여 자신이 속한 대학의 챗봇을 제작 할 수 있다. 더 나아가 챗봇 제작
-  중간중간 자신이 제작한 챗봇을 테스트 할 수 있는 미리보기 기능을 제공하여 편의성을 증가 시킬 수 있다. 인터페이스와 기능의 편의성을 추구하여 학생의 참여도를 높이는 것이 목표이고, 참여하는 대학들의 커뮤니티가
-  활발해지도록 하는것이다. 캠퍼스뿐만 아니라 초,중,고등학교, 기업, 단체에서도 활용이 가능하다. 
+  '스뮤힐'의 궁극적인 목표는 '스뮤힐'을 통해 누구나 쉽게 챗봇을 만들고 관리할 수 있고, 캠퍼스별로 한개의 챗봇만으로 학생들이 만족할 수 있게 사용할 수 있게끔 한다.
+  이를 위해 '템플릿', '유저 친화적 인터페이스', '유저별 권한 기능', '창작마당'등 과 같은 핵심 기술들을 개발하는 것이 일차적 목표이다.
   
+  이후 핵심기능을 구현하고 유지보수를 거친이후 안정성을 가지게 되면 '캠퍼스'라는 한정된 그룹의 범위를 넓혀 더 많은 단체들이 챗봇 빌더에 대한 막연한 두려움과 어려움을 최대한 없애고자 한다.
   ```
 
   **2) 주요 개발내용(기능중심)**
+
+  **'템플릿', '유저 친화적 인터페이스', '유저별 권한 기능', '미리보기', '창작마당'등과 같은 핵심 기능들 중점으로 기술해줘요 왠많하면 한 기술당 번호 한두개만...**
 
   ```
   1. 템플릿을 제공하여 사용자가 간단한 입력만으로 시나리오를 작성할 수 있으며 템플릿끼리 드래그하여 연결하면 템플릿안의 입력값도 계층적으로 구성된다.
@@ -47,15 +62,25 @@
   3. 소속된 대학의 이메일로 인증을 받은 사용자는 챗봇 빌더에 로그인 할 수 있으며 부여받은 권한에 따라 챗봇 제작에 관여할 수 있는 부분이 다르다.
   4. 템플릿간의 관계를 드래그 가능한 플로우차트 형식으로 만들 수 있어 시각적으로 이해하기 편리하다.		  
   5. 웹상에 채팅 기능을 구현하여 사용자들끼리 실시간으로 대화가 가능하다.
+  
+  
   ```
 
   **3) 기존 기술 활용여부 및 차별성**
 
+  **동적인 웹... 과 같은 말대신 유저 친화적 인터페이스로 대신 써줘요**
+
+  **이부분도 1. 프로젝트 개요 한번 읽어보시고 보완 해줘요**
+
   ```
-  기존의 챗봇 빌더는 많이 존재하지만 아무리 간단하더라도 약간의 코딩과 API에 대한 지식이 필요하다. '스뮤힐'은 그 점을 보완하여 누구나 쉽게 사용할 수 있는 챗봇 빌더를 추구한다. 또한 캠퍼스에 특화된 챗봇을 만들기 위한 
-  챗봇 빌더는 없기 때문에 정보 교류가 활발한 대학생들의 활용도가 높을 것이다.동적인 웹을 위해 여러 자바스크립트 라이브러리를 사용하며 SVG를 사용하여 그래픽적인 부분을 보완한다.
-  기존의 챗봇 빌더는 여러명이 제작 중 일 때 겹치는 부분이 생길 수 있지만 '스뮤힐'은 제작 중 인 부분은 접근하지 못하도록 하여 겹치는 일이 생기지 못하게 한다. 더 나아가 챗봇의 제작 기록들을 저장하여 인수인계 등에 
-  유용하게 쓰일 수 있다. 
+  기존의 챗봇 빌더는 많이 존재하지만 아무리 간단하더라도 약간의 코딩과 API에 대한 지식이 필요하다. '스뮤힐'은 그 점을 보완하여 유저 친화적 인터페이스와 템플릿의 형태를 이용해 누구나 쉽게 사용할 수 있는 챗봇 빌더를 추구한다. 
+  또한 기존에 캠퍼스에 특화된 챗봇을 만들기 위한 챗봇 빌더는 없을 뿐더러, 단체내 챗봇 빌더 개발자 부재, 인수인계, 어려운 유지보수등의 이유 때문에 충분히 이와 같은 문제점들을 해결할 수 있기에 활용도가 높을 것이다.
+  
+  
+  
+  기존의 챗봇 빌더는 여러명이 제작 중 일 때 겹치는 부분이 생길 수 있지만 '스뮤힐'은 제작 중 인 부분은 접근하지 못하도록 하여 겹치는 일이 생기지 못하게 한다. 더 나아가 챗봇의 제작 기록들을 저장하여 인수인계 등에 (이 기술을 읽컫는말 '권한'을 이용해 설명 ㄱㄱ)
+  
+  유용하게 쓰일 수 있다. (구체적.. 위 1.프로젝트 개요 읽어보고 점더 생각해보시고 적어주세요)
   
   ```
 
@@ -74,10 +99,11 @@
 * **주요기능 및 설명**
 
   ```
-  '스뮤힐'의 주요기능은 크게 3가지로 챗봇빌딩 기능, 권한 기능, 템플릿 기능이 있다.
-  첫번째로 챗봇빌딩 기능은 챗봇을 구현할 수 있는 챗봇 빌더의 플랫폼을 보다 직관적으로 이해하고 사용할 수 있게끔, 유저 편의성에 관점을 두고 구현하고자 하는 기능이다.
+  '스뮤힐'의 주요기능은 크게 3가지로 챗봇 구축 기능, 권한 기능, 템플릿 기능이 있다.
+  첫번째로 챗봇 구축 기능은 챗봇을 구현할 수 있는 챗봇 빌더의 플랫폼을 보다 직관적으로 이해하고 사용할 수 있게끔, 유저 편의성 인터페이스에 중점을 두고 구현하고자 하는 기능이다.
+  
   두번째로 권한 기능은 특정 챗봇에 마스터 권한을 가지고 있는 사람이 해당 챗봇을 수정 및 관리를 하는 사람들마다 영역별로 권한을 부여해 권한이 부여된 영역 내에서만 챗봇을 수정 및 관리를 할수 있는 기능이다.
-  마지막으로 템플릿 기능은 '스뮤힐' 챗봇빌더가 캠퍼스 챗봇 빌더라는 특정 분야에 전문성을 가지는 만큼, 대학교와 같은 단체에서 주로 구현하고 사용하는 특정 기능들을 템플릿 형태로 미리 구현해 폼(form)형태로 사용자에게 제공해 보다 쉽게 챗봇을 빌딩할수 있게하는 기능이다.
+  마지막으로 템플릿 기능은 '스뮤힐' 챗봇빌더가 캠퍼스 챗봇 빌더라는 특정 분야에 전문성을 가지는 만큼, 대학교와 같은 단체에서 주로 구현하고 사용하는 특정 기능들을 템플릿 형태로 미리 구현해 폼(form)형태로 사용자에게 제공해 보다 쉽게 챗봇을 구축할 수 있게하는 기능이다.
   ```
 
 * **적용기술**
@@ -87,7 +113,7 @@
   웹 페이지(프론트엔드)를 구현하기 위한 HTML, CSS, JS와 같은 기술들이 사용되었고
   사용자 계정정보 및 구현중인 챗봇 빌더의 형태를 저장하고 불러오는 등의 DB 기능을 구현하기 위해
   Node.js, ERS, AWS 서버와 같은 기술을 사용했다.
-  그리고 svg내에 챗봇 빌더의 flowchart를 구현하기 위해서 jsPlumb 라이브러리를 사용했다.
+  그리고 svg 태그 내에 챗봇 빌더의 flowchart를 구현하기 위해서 jsPlumb 라이브러리를 사용했다.
   ```
 
 * **예상 결과물**
@@ -116,17 +142,15 @@
 
   ```
     시작 월:3월 종료 월: 4월
-    1. 챗봇 빌더 및 챗봇 시장 분석 
+    1. 챗봇 빌더 및 챗봇 시장 분석(벤치마킹) 
     2. 상용화된 기존 챗봇 빌더와 장단점 분석
-    
-  
   ```
-
+  
 * **설계**
 
   ```
     시작 월:5월 종료 월: 6월
-    1. 기본설계
+    1. 챗봇 빌더 프레임 설계
     2. 상세기능정의, 구현모델/구조/기능 설계
     3. DB설계, 프로세스설계 및 기술 검토
   
@@ -137,27 +161,24 @@
   ```
     시작 월: 7월 종료 월: 9월
     1. S3, EC2 구축 
-    2. 파이썬을 통한 텔레그램 챗봇 제작
-    3. HTML, CSS, JAVASCRIPT를 통한 웹페이지 제작
-    4. DB 설계
+    2. 파이썬을 통한 텔레그램 챗봇 플랫폼 분석 및 템플릿 개발
+    3. 챗봇 플랫폼 제공을 위한 웹페이지 구축
+    4. AWS를 이용해 DB 구축
   ```
 
 * **테스트**
 
-```
+   ```
     시작 월: 9월 종료 월: 10월
     1. 테스트 시나리오 작성 
     2. 단위테스트 및 디버깅, 통합테스트
-  
-  ```
+   ```
 
 * **종료**
 
   ```
     시작 월: 11월 종료 월: 11월
     1. 한이음공모전, 최종 결과보고서 작성
-    2. 특허 등록
-  
   ```
-
+  
   
