--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -8,35 +8,24 @@
   
   ```
   본 프로젝트를 통해 기존에 학교 홈페이지와 같은 매체를 통해서만 알 수 있는 학사정보와 총학생회, 동아리와 같은 여러 학교 단체들이 정보들을 제공하는 챗봇을 비전공자라도 쉽게 만들 수 있고 이를 통해 학생들이 보다 쉽게 정보들을 접할 수 있게 해주는 ‘캠퍼스 챗봇 빌더(이하 스뮤힐)’ 개발하고자 한다.
-  
-  '스뮤힐'을 이용해 챗봇을 개발하고자 하는 단체들은 직관적이고 유저 친화적인 개발 툴을 이용해 관련 개발지식이 없더라도 쉽게 챗봇을 생성하고 유지보수할 수 있다.
-그리고 캠퍼스 챗봇에 특화된 만큼 챗봇 빌더에서 자체적으로 제공되는 많이 사용하는 폼(form)을 기본적으로 템플릿(Template) 형태로 제공하고, 사람들이 만든 커스텀 폼, 템플릿을 '창작마당'이라는 매체를 통해 공유 할수 있다.
-  
-  또한 유저마다 '권한'기능을 부여해, 하나의 통합된 챗봇이라해도 챗봇 빌더를 사용하는 사람들마다 접근할수 있는 영역을 지정할 수 있다.
-  
+  '스뮤힐'을 이용해 챗봇을 개발하고자 하는 단체들은 직관적이고 유저 친화적인 개발 툴을 이용해 관련 개발지식이 없더라도 쉽게 챗봇을 생성하고 유지보수할 수 있다. 캠퍼스 챗봇에 특화된 만큼 챗봇 빌더에서 자체적으로 제공되는 많이 사용하는 폼(form)을 기본적으로 템플릿(Template) 형태로 제공하고, 사람들이 만든 커스텀 폼, 템플릿을 '창작마당'이라는 매체를 통해 공유 할수 있다. 또한 유저마다 '권한'기능을 부여해, 하나의 통합된 챗봇이라해도 챗봇 빌더를 사용하는 사람들마다 접근할수 있는 영역을 지정할 수 있다.
   '스뮤힐'을 이용해 개발된 챗봇은 기존에 단체마다 여러개로 나뉘어져있던 챗봇으로 인해 헷갈려하던 사람들을 하나의 통합된 챗봇으로 제공되고, 쉬운 유지보수로 관리 할수 있는 만큼 사용자들은 접근성이 높은 카카오톡, 페이스북 메시지와 같은 메시징 플랫폼을 통해 원하는 정보를 쉽게 얻을 수 있다.
   ```
   
 - **추진배경 및 필요성**
 
   ```
-  기존에는 대부분의 학교 정보를 얻기 위해서는 홈페이지에 들어가서 정보를 검색하거나, 학교에 전화를 해 정보를 물어봐야하는 불편함이 있다.
-  또한 학교내 단체가 챗봇을 만들고 싶어도 비교적 난이도 있는 챗봇빌더로 인해 관련 기술자가 없어 만들지 못하거나, 
-  챗봇들을 만들더라도 한 학교내에서도 단체별로 서로 다른 챗봇을 구축하고 있고 이러한 챗봇마저 해마다 바뀌는 관리자로 인해 인수인계가 제대로 되지않는 등의 문제로 정보의 최신화가 되지 않고, 결국 같은 단체에서 새로운 챗봇을 생성하는 등의 문제점이 발생하고 있다.
-  결국 사용자들은 자신이 원하는 정보를 얻기위해서 어떤 단체의 챗봇에 들어가봐야 되는지 모르고, 챗봇을 사용해도 정보의 최신화가 이루어지지 않아 결국 시간낭비를 하고 마는 경우가 발생해 대부분의 학생들이 학교 챗봇을 사용하지 않는다.
-  
-  그래서 이러한 문제점들을 해결하기위해 본 프로젝트를 기획하게 되었다.
-  본 챗봇빌더를 통해 
-  
-  **위에꺼보고 작성할것**
-  
-  챗봇을 제작할 때 비전공자도 접근하기 용이하여 총학생회, 동아리, 과학생회와 같은 단체들의 정보를 본 챗봇 빌더를 통해 쉽게 제작, 수정 가능하게 하여 궁극적으로 한 개의 챗봇으로 운영해 간단히 사용자에게 정보를 제공할 수 있다. 
+  기존에는 대부분의 학교 정보를 얻기 위해서는 홈페이지에 들어가서 정보를 검색하거나, 학교에 직접 전화를 해서 정보를 얻어야하는 불편함이 있었다.
+  그러한 불편함을 해결하기 위해 학교나 학생들이 챗봇을 자체적을 만들기도 하지만, 챗봇을 만들더라도 한 학교내에서도 단체별로 서로 다른 챗봇을 구축하고 있고 이러한 챗봇마저 해마다 바뀌는 관리자로 인해 인수인계가 제대로 되지않는 등의 문제점을 갖고 있어 챗봇 사용자들은 최신화된 정보를 얻기 힘들었다.
+  결국 사용자들은 자신이 원하는 정보를 얻기위해서 어떤 단체의 챗봇에 들어가봐야 되는지 모르고, 챗봇을 사용해도 정보의 최신화가 이루어지지 않아 결국 시간낭비를 하고 마는 경우가 발생해 대부분의 학생들이 학교 챗봇을 사용하지 않는 상황이 발생하여 좀 더 효율적인 챗봇이 필요했다.
+  우리가 개발하고자 하는 챗봇 빌더 '스뮤힐'은 위와 같은 불편함을 해결할 수 있다. 먼저 '스뮤힐'은 하나의 챗봇 빌더를 통해 통합된 챗봇을 제공하여 사용자가 한 개의 챗봇을 통해 정보를 얻을 수 있다. 통합된 챗봇 빌더를 관리하기 위해 각자의 영역과 권환이 부여되어있다. 예를 들어 총학생회는 총학생회 영역의 정보들만 관리할 수 있고, 동아리 영역의 정보들은 각 동아리 관리자만 접근할 수 있게 되어있다. 또한 각자 영역의 챗봇 관리자가 챗봇을 전혀 모르는 사람이더라도 미리 제공되는 템플릿(Template)을 통해 정보만 추가하면 되기에 누구나 챗봇을 관리할 수 있다. 이러한 기능을 통해 챗봇을 만들게 된다면 챗봇 사용자는 정보를 쉽게 얻을 수 있고, 챗봇 빌더의 사용자는 챗봇의 관리가 용이해 정보들을 쉽게 최신화 할 수 있는 장점이 있다.
+
   ```
 
 - **국내, 외 기술 현황**
 
   ```
-  국내에서 챗봇 빌더는 카카오, 네이버, LG CNS와 같은 대형 IT 서비스 기업에서 '카카오 i 오픈빌더', '  danbee.AI'와 같은 챗봇 빌더를 제공하기 시작했고, '봇그리다'와 같은 챗봇빌더 프레임워크의 서비스 개시를 앞두고 있는등의 챗봇 빌더에 대한 인식을 넓히기 시작했다.
+  국내에서 챗봇 빌더는 카카오, 네이버, LG CNS와 같은 대형 IT 서비스 기업에서 '카카오 i 오픈빌더', 'danbee.AI'와 같은 챗봇 빌더를 제공하기 시작했고, '봇그리다'와 같은 챗봇빌더 프레임워크의 서비스 개시를 앞두고 있는등의 챗봇 빌더에 대한 인식을 넓히기 시작했다.
   해외에서는 이미 'Chatfuel', 'Dialogflow', 'ManyChat' 와 같은 수많은 챗봇빌더를 제공하고 있고, 이 챗봇빌더들은 대부분 페이스북 메세지 챗봇빌더의 기능을 제공하고 있다.
   우리는 이미 사용가능한 국내 챗봇 빌더와 차별성을 두기 위해 '캠퍼스'라는 특정 사회 그룹에 전문성을 두었고, 이를 템플릿이라는 형태와 관리를 위한 권한 기능을 중점적으로 구현하고자 한다.
   ```
