--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -35,42 +35,27 @@
   **1) 최종개발 목표**
 
   ```
-  '스뮤힐'의 궁극적인 목표는 '스뮤힐'을 통해 누구나 쉽게 챗봇을 만들고 관리할 수 있고, 캠퍼스별로 한개의 챗봇만으로 학생들이 만족할 수 있게 사용할 수 있게끔 한다.
+  흔히 주위에서 챗봇을 만드는 것에 대해 얘기하면,  코딩에 대한 두려움 때문에 쉽게 접근하지 못하고 있는 것을 볼 수 있다. 챗봇을 쓰는것에는 거부감이 없지만 자신이 직접 참여하여 제작에 기여하는것까지는 생각하지 못한다.
+  '스뮤힐'의 궁극적인 목표는 '스뮤힐'을 통해 누구나 쉽게 챗봇을 만들고 관리할 수 있고, 캠퍼스별로 한개의 챗봇만으로 학생들이 만족할 수 있게 사용할 수 있게끔 하는것이다.
   이를 위해 '템플릿', '유저 친화적 인터페이스', '유저별 권한 기능', '창작마당'등 과 같은 핵심 기술들을 개발하는 것이 일차적 목표이다.
-  
   이후 핵심기능을 구현하고 유지보수를 거친이후 안정성을 가지게 되면 '캠퍼스'라는 한정된 그룹의 범위를 넓혀 더 많은 단체들이 챗봇 빌더에 대한 막연한 두려움과 어려움을 최대한 없애고자 한다.
   ```
 
   **2) 주요 개발내용(기능중심)**
-
-  **'템플릿', '유저 친화적 인터페이스', '유저별 권한 기능', '미리보기', '창작마당'등과 같은 핵심 기능들 중점으로 기술해줘요 왠많하면 한 기술당 번호 한두개만...**
-
   ```
-  1. 템플릿을 제공하여 사용자가 간단한 입력만으로 시나리오를 작성할 수 있으며 템플릿끼리 드래그하여 연결하면 템플릿안의 입력값도 계층적으로 구성된다.
-  2. 사용자가 웹에서 입력한 값을 데이터로 저장하여 메시징 플랫폼과 연동시켜 플랫폼에 맞는 챗봇을 만들 수 있다. 이로써 같은 데이터로 여러 플랫폼과 연동할 수 있다.
-  3. 소속된 대학의 이메일로 인증을 받은 사용자는 챗봇 빌더에 로그인 할 수 있으며 부여받은 권한에 따라 챗봇 제작에 관여할 수 있는 부분이 다르다.
-  4. 템플릿간의 관계를 드래그 가능한 플로우차트 형식으로 만들 수 있어 시각적으로 이해하기 편리하다.		  
-  5. 웹상에 채팅 기능을 구현하여 사용자들끼리 실시간으로 대화가 가능하다.
-  
-  
+  1. 템플릿을 제공하여 유저는 간단한 입력만으로 챗봇의 시나리오를 작성할 수 있다.
+  2. 드래그 가능한 플로우차트 형식으로 만들 수 있어 유저 친화적인 인터페이스를 제공한다.
+  3. 유저별로 권한을 다르게 부여하여 관여할 수 있는 부분을 다르게 할 수 있다.
+  4. 미리보기 기능을 제공하여 챗봇을 제작하는 도중에도 테스트해 볼 수 있다.
+  5. 유저들이 스스로 만든 템플릿을 창작마당을 통해 공유할 수 있도록 한다.
   ```
 
   **3) 기존 기술 활용여부 및 차별성**
 
-  **동적인 웹... 과 같은 말대신 유저 친화적 인터페이스로 대신 써줘요**
-
-  **이부분도 1. 프로젝트 개요 한번 읽어보시고 보완 해줘요**
-
   ```
-  기존의 챗봇 빌더는 많이 존재하지만 아무리 간단하더라도 약간의 코딩과 API에 대한 지식이 필요하다. '스뮤힐'은 그 점을 보완하여 유저 친화적 인터페이스와 템플릿의 형태를 이용해 누구나 쉽게 사용할 수 있는 챗봇 빌더를 추구한다. 
-  또한 기존에 캠퍼스에 특화된 챗봇을 만들기 위한 챗봇 빌더는 없을 뿐더러, 단체내 챗봇 빌더 개발자 부재, 인수인계, 어려운 유지보수등의 이유 때문에 충분히 이와 같은 문제점들을 해결할 수 있기에 활용도가 높을 것이다.
-  
-  
-  
-  기존의 챗봇 빌더는 여러명이 제작 중 일 때 겹치는 부분이 생길 수 있지만 '스뮤힐'은 제작 중 인 부분은 접근하지 못하도록 하여 겹치는 일이 생기지 못하게 한다. 더 나아가 챗봇의 제작 기록들을 저장하여 인수인계 등에 (이 기술을 읽컫는말 '권한'을 이용해 설명 ㄱㄱ)
-  
-  유용하게 쓰일 수 있다. (구체적.. 위 1.프로젝트 개요 읽어보고 점더 생각해보시고 적어주세요)
-  
+  기존의 챗봇 빌더는 많이 존재하지만 아무리 간단하더라도 약간의 코딩과 API에 대한 지식이 필요하다. 대화의 자연스러운 흐름을 위해서는 '자연어처리'(NLU)에 대한 이해도 필요하고 인터페이스가 복잡하여 입력값들이 엉키는 경우도 발생한다. '스뮤힐'은 그 점을 보완하여 유저 친화적 인터페이스와 템플릿의 형태를 이용해 누구나 쉽게 사용할 수 있는 챗봇 빌더를 추구한다. 
+  또한 기존에 캠퍼스에 특화된 챗봇을 만들기 위한 챗봇 빌더는 없을 뿐더러, 단체내 챗봇 빌더 개발자 부재, 인수인계, 어려운 유지보수등의 이유 때문에 충분히 이와 같은 문제점들을 해결할 수 있기에 활용도가 높을 것이다. 특히 '스뮤힐'은 유저가 직접 참여하여 챗봇을 개선시키기 때문에 제작에 드는 비용적인 부분은 전혀 고려대상이 아닌것도 큰 장점이다.
+  '스뮤힐'은 다른 챗봇 빌더와 달리 사용자별로 권한을 달리 적용할 수 있다. 이로써 여러명이 작업을 할 때 자신의 권한을 넘어서는 부분을 무단으로 변경, 삭제하는 것을 방지하며 작업중인 부분을 다른 사람이 접근하지 못하게 블록처리하여 작업에 혼동이 발생되지 않게 해준다.
   ```
 
 - **구성도**
