--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -60,9 +60,17 @@
 - **국내, 외 기술 현황**
 
   ```
-  국내에서 챗봇 빌더는 카카오, 네이버, LG CNS와 같은 대형 IT 서비스 기업에서 '카카오 i 오픈빌더', 'danbee.AI'와 같은 챗봇 빌더를 제공하기 시작했고, '봇그리다'와 같은 챗봇빌더 프레임워크의 서비스 개시를 앞두고 있는등의 챗봇 빌더에 대한 인식을 넓히기 시작했다.
-  해외에서는 이미 'Chatfuel', 'Dialogflow', 'ManyChat' 와 같은 수많은 챗봇빌더를 제공하고 있고, 이 챗봇빌더들은 대부분 페이스북 메세지 챗봇빌더의 기능을 제공하고 있다.
-  우리는 이미 사용가능한 국내 챗봇 빌더와 차별성을 두기 위해 '캠퍼스'라는 특정 사회 그룹에 전문성을 두었고, 이를 템플릿이라는 형태와 관리를 위한 권한 기능을 중점적으로   구현하고자 한다.
+  국내에서 챗봇 빌더는 카카오, 네이버, LG CNS와 같은 대형 IT 서비스 기업에서 
+  '카카오 i 오픈빌더', 'danbee.AI'와 같은 챗봇 빌더를 제공하기 시작했고, 
+  '봇그리다'와 같은 챗봇빌더 프레임워크들이 서비스 시작하는 등의 
+  챗봇 빌더에 대한 인식을 넓히기 시작했다.
+  
+  해외에서는 이미 'Chatfuel', 'Dialogflow', 'ManyChat' 와 같은 수많은 챗봇빌더를 제공하고 있고, 
+  이 챗봇빌더들은 대부분 페이스북 메세지 챗봇빌더의 기능을 제공하고 있다.
+  
+  우리는 이미 존재하는 국내외 챗봇 빌더와 차별성을 두기 위해 
+  '캠퍼스'라는 특정 사회 그룹에 전문성을 두었고, 
+  이를 템플릿이라는 형태와 관리를 위한 권한 기능을 중점적으로 구현하고자 한다.
   ```
 
 - **개발 목표 및 내용**
@@ -70,10 +78,21 @@
   **1) 최종개발 목표**
 
   ```
-  흔히 주위에서 챗봇을 만드는 것에 대해 얘기하면,  코딩에 대한 두려움 때문에 쉽게 접근하지 못하고 있는 것을 볼 수 있다. 챗봇을 쓰는것에는 거부감이 없지만 자신이 직접 참여하여 제작에 기여하는것까지는 생각하지 못한다.
-  '스뮤힐'의 궁극적인 목표는 '스뮤힐'을 통해 누구나 쉽게 챗봇을 만들고 관리할 수 있고, 캠퍼스별로 한개의 챗봇만으로 학생들이 만족할 수 있게 사용할 수 있게끔 하는것이다.
-  이를 위해 '템플릿', '유저 친화적 인터페이스', '유저별 권한 기능', '창작마당'등 과 같은 핵심 기술들을 개발하는 것이 일차적 목표이다.
-  이후 핵심기능을 구현하고 유지보수를 거친이후 안정성을 가지게 되면 '캠퍼스'라는 한정된 그룹의 범위를 넓혀 더 많은 단체들이 챗봇 빌더에 대한 막연한 두려움과 어려움을 최대한 없애고자 한다.
+  보통 주변에서 챗봇에 대해 이야기 해보면, 의외로 챗봇을 사용해본 사람이 많았다.
+  하지만, 그중 대부분이 수많은 불편함때문에 챗봇에 대한 사용 만족도가 낮았고, 
+  사용하더라도 불가피한 상황일때나 사용하고들 한다.
+  거기에 챗봇을 제작해보거나 챗봇빌더라는 것에 대해 이야기 해보면,
+  비전공자들은 챗봇빌더라는 용어 자체를 모르는 경우가 많았고, 전공자라 하더라도
+  막연히 챗봇을 만드는것이 어려울 것이라는 생각때문에 쉽게 시도하지 않았다.
+  
+  이러한 점에서 '스뮤힐'의 궁극적인 목표는 
+  '스뮤힐'을 통해 누구나 쉽게 챗봇을 만들고 관리할 수 있게하고,
+  챗봇과 챗봇빌더에 대한 접근성을 높이고자 하는 것이다.
+  
+  이를 위해 '템플릿', '유저 친화적 인터페이스', '유저별 권한 기능', '창작마당'등 과 같은 
+  핵심 기술들을 개발하는 것이 우리의 주 목표이다.
+  이후 유지보수와 안정성을 가지게 되면 '캠퍼스'라는 한정된 그룹의 범위를 넓혀 
+  더 많은 단체들이 챗봇 빌더를 사용할 수 있게하고자 한다.
   ```
 
   **2) 주요 개발내용(기능중심)**
