--- a/documents/Output_Documents/중간보고서.md
+++ b/documents/Output_Documents/중간보고서.md
@@ -233,17 +233,25 @@
 * **기대효과**
 
   ```
-  '스뮤힐'을 통해 챗봇을 만드는 사람들은 직관적인 인터페이스와 기능들로 관련 전문지식이 없더라도 쉽게 챗봇을 구축할 수 있고, 기존에 여러개로 나뉘어 있던 챗봇들을 하나로 통합해 관리가 가능하다.
-  이와 같이 쉽고, 관리에 용이하기에 챗봇을 유지보수하기가 쉽어, 최신 정보들도 바로 추가할 수 있다.
-  이렇게 챗봇이 잘 개발되고 유지되면, 이를 사용하는 사용자들도 챗봇을 통해 정보를 쉽게 얻을수 있어
-  보다 접근성이 더욱 높아진다.
+  '스뮤힐'을 통해 챗봇을 만드는 사람들은 직관적인 인터페이스와 기능들로 관련 전문지식이 없더라도 
+  쉽게 챗봇을 구축할 수 있고, 기존에 여러개로 나뉘어 있던 챗봇들을 하나로 통합해 관리가 가능하다.
+  
+  이와 같은 쉬운 구축 방법과 용이한 관리방법으로 인해 챗봇을 유지보수하기가 쉬어, 
+  챗봇을 통한 정보 최신화 유지 뿐만 아니라 사용자가 원하는 기능 구현이 가능하다.
+  
+  그리고 위와 같이 챗봇이 잘 구축되고 유지되면, 이를 사용하는 사용자들도 
+  챗봇을 통해 자신들이 원하는 정보에 대한 접근성이 높아져
+  이를 사용하는 사용자들의 수도 증가할 것이다.
   ```
 
 * **개선사항**
 
   ```
-  아직은 핵심 기능들 중점으로 개발하고 있기에, 핵심 기능들을 구현하고 나면 유지 친화적 인터페이스를 위해 기능을 더욱 간편화 하고, 디자인에 중점을 두고자 한다.
-  또한 핵심 기능들도 최적화 기능을 지속적으로 거치면서, '스뮤힐'을 이용하고자 하는 사람들이 불편함이 없게 하고자 한다.
+  아직은 핵심 기능들 중점으로 개발하고 있기에, 핵심 기능들을 구현하고 나면 
+  유지 친화적 인터페이스를 위해 기능을 더욱 간편화 하고, 디자인에 중점을 두고자 한다.
+  
+  또한 핵심 기능들도 최적화 기능을 지속적으로 거치면서, 
+  '스뮤힐'을 이용하고자 하는 사람들이 불편함이 없게 하고자 한다.
   ```
 
 * **문제점 및 애로사항**
