--- a/documents/Output_Documents/공모전 지원서.md
+++ b/documents/Output_Documents/공모전 지원서.md
@@ -95,9 +95,12 @@
 
 
 ```
-- ‘스뮤고개’는 챗봇에 ‘텍스트’,  ‘리스트’,  ‘이미지’,  ‘동영상’과 같은 기능들을 템플릿 형태로 추가할 수 있으며, 이 템플릿들에 내용을 추가하고, 선으로 연결하여 시나리오 기반의 챗봇을 만들 수 있다. 국내에 존재하는 챗봇 빌더인 ’danbee.Ai’도 템플릿과 선으로 연결할 수 있는 기능을 제공하지만, 내용을 하려고 템플릿을 클릭하면, 다른 팝업 페이지가 생성되는 불편함을 가지고 있었지만, 스뮤고개 챗봇 빌더는 더 직관적인 UI제공하고, 템플릿을 클릭하여도 팝업 창 없이 바로 내용을 추가할 수 있는 편리함을 갖고 있다.
-- 스뮤고개는 학생에게 특화된 챗봇 빌더로서 동아리, 총학생회, 학교 정보와 같이 큰 틀을 제공하여, 챗봇 빌더 사용자는 어느정도 챗봇이 구성되어 있는 상태로 챗봇 제작을 시작하여 더 빠른 시일 내 챗봇을 제작할 수 있다.
-- 스뮤고개는 권한을 부여하여 여러 사람이 챗봇을 수정할 수 있는 기능을 제공한다. 예를 들어 동아리 관리자는 동아리 부분의 챗봇을 관리할 수 있고, 총학생회 관리자는 총학생회 챗봇을 관리함으로서 더 높은 챗봇의 정확도와 완성도를 제공한다. 이때 동아리 관리자는 총학생회 챗봇에 접근할 수 없다.
+
+- ‘스뮤고개’는 챗봇에 ‘텍스트’,  ‘리스트’,  ‘이미지’,  ‘동영상’과 같은 기능들을 템플릿 형태로 추가할 수 있다. '텍스트' 템플릿을 사용하고 싶다면, '텍스트'의 템플릿을 클릭하고 제목, 내용을 작성 후 저장을 누르면 챗봇이 구축된다. 이후 사용자가 제목에 해당하는 질문을 한다면, 내용에 해당하는 답변을 출력하게 된다. 
+'리스트'는 '텍스트'와 유사하지만 버튼을 추가로 입력할 수 있다. 그렇게 되면 사용자는 버튼 형식으로. 챗봇을 이용할 수 있게 된다. '이미지', '동영상'도 같은 방식으로 작동된다. 또한 템플릿에 해당하는 내용을 선으로 연결하게 되면, 시나리오 형식으로 진행할 수 있다. 
+- 국내에 존재하는 챗봇 빌더인 ’danbee.Ai’도 템플릿과 선으로 연결할 수 있는 기능을 제공하지만, 내용을 하려고 템플릿을 클릭하면, 다른 팝업 페이지가 생성되는 불편함을 가지고 있었지만, 스뮤고개 챗봇 빌더는 더 직관적인 UI제공하고, 템플릿을 클릭하여도 팝업 창 없이 바로 내용을 추가할 수 있는 편리함을 갖고 있다.
+- '스뮤고개'는 학생에게 특화된 챗봇 빌더로서 동아리, 총학생회, 학교 정보와 같이 큰 틀을 제공하여, 챗봇 빌더 사용자는 어느정도 챗봇이 구성되어 있는 상태로 '텍스트', '리스트', '이미지', '동영상'과 같은 기능을 활용하여 챗봇 제작을 시작하여 더 빠른 시일 내 챗봇을 제작할 수 있다.
+- '스뮤고개'는 권한을 부여하여 여러 사람이 챗봇을 수정할 수 있는 기능을 제공한다. 예를 들어 동아리 관리자는 동아리 부분의 챗봇을 관리할 수 있고, 총학생회 관리자는 총학생회 챗봇을 관리함으로서 더 높은 챗봇의 정확도와 완성도를 제공한다. 이때 동아리 관리자는 총학생회 챗봇에 접근할 수 없다. 이렇게 되면 챗봇의 관리자가 바뀌더라도 자신의 영역만 신경쓰면 되기에 기존 학교 챗봇이 갖고 있었던, 유지 보수가 안된다는 단점을 극복할 수 있게 된다. 
 
 
 
