--- a/documents/Output_Documents/공모전 지원서.md
+++ b/documents/Output_Documents/공모전 지원서.md
@@ -256,27 +256,31 @@
 
 ```
 
-○ 챗봇빌더 자체가 국내외적으로 크게 발전한 시작이 아니며 이 프로젝트와 같이 특정 단체에 특화된 챗봇 빌더는 없기에 수많은 해당 단체의 수요를 만족할 수 있다.
+○아직 챗봇 빌더가 크게 발전한 시장이 아니고 특히 캠퍼스에 특화된 챗봇 빌더는 없기 때문에 많은 학생들의 수요를 만족시킬 수 있다.
 
-○ 대부분의 챗봇빌더는 인텐트와 자연어 처리에 대한 이해가 필요하며 메시지 플랫폼과 연동과정에서 코딩이 필요하므로 일반인들이 접근하기에 쉽지 않다.
+○대부분의 챗봇 빌더는 인텐트와 자연어 처리에 대한 이해가 필요하며 메시지 플랫폼과 연동과정에서 코딩이 필요하므로 일반인들이 접근하기에 쉽지 않다. 하지만 '스뮤힐'은 직관적인 UI와 템플릿으로 챗봇을 보다 쉽게 만들게 해 주기 때문에 챗봇 빌더에 대한 접근성이 높아진다.
 
-○또한 이들은 플로우차트를 이용한다는 점에서 우리 프로젝트와 유사하지만  챗봇 빌더의 UI를 해당 챗봇 플랫폼에 제공하는 형태와 유사하게 구현한 점에 있어서 보다 직관적이라, 사용자의 이해를 돕는다.
+○기존의 챗봇 빌더는 개인이 제작하는 형태로 유지보수와 인수인계에 어려움이 있었지만, '스뮤힐'은 협업하여 제작하는 동시에 챗봇 제작 이력들을 기록해 둠으로써 유지보수와 인수인계가 수월해진다.
 
-○특정 사용자들에게만 챗봇을 일부 영역관리할 수 있는 권한을 부여할 수 있어, 여러명이 한 챗봇을 구축한다해도 보안의 위협을 낮출 수 있다.
+○사용자별로 챗봇의 일부 영역만 관리할 수 있는 권한을 부여하여, 여러명이 협업하여 챗봇을 제작할 떄 중복의 위험을 없에고, 하나로 통합이 가능하여 관리가 수월해진다.
+
+○챗봇을 만드는데 관심이 있는 사람은 누구나 손쉽게 만들 수 있기 때문에 입문용으로 쳇봇의 원리를 간단히 이해하는데 매우 효과적이다.
 ```
 
 #### 2. 작품의 활용분야
 
 ```
-○ 챗봇빌더에 대한 접근성 향상 : 챗봇빌더가 낯선 사람들의 챗봇 구축에 대한 진입 장벽을 낮춰줘, 사람들의 인식을 변화시킬 수 있다. 이는 자신이 속한 학교의 챗봇제작에 참여하여 언제든지 수정,관리 할 수 있다는 뜻이다.
+○자연어처리기술과 결합하여 한국어의 자연어처리기술을 발전시킬 수 있고 매끄럽고 자연스러운 대화를 할 수 있는 챗봇을 만들 수 있다.
 
-○ 정보의 다양화와 활용 : 보다 많은 학생들이 참여하게 되면 직접 찾아보지 않으면 알기 어려웠던 세세하고  많은 정보들을 담을 수 있게 되고 모이고 모여 빅데이터를 이루게 된다. 이 빅데이터는 학교를 대표하는 데이터가 될 수 있고 여러 방면으로 활용이 가능하다.
+○챗봇이 필요한 누구나 챗봇을 만들어 학업, 사업등 개인의 편의를 위해 얼마든지 사용할 수 있어 정보화 시대에 삶을 좀 더 윤택하게 할 수 있다.
 
-○ 분야의 확장 : 챗봇빌더를 캠퍼스뿐만 아니라 기업, 병원 등 단체에서도 사용할 수 있다. 정보가 통합되어 관리되고 최신 정보를 바로 업데이트 할 수 있기 때문에 획일성과 최신성을 갖출 수 있다. 이는 기업,단체에 속한 직원들간의 정보 공유를 활성화 시킨다.
+○사용자들의 참여가 높아져 입력된 데이터가 많아지면 빅데이터가 형성되며 이것의 통계,분석을 통해 정보의 활용이 가능하다.
 
-○ 개인정보 열람 :   학사정보와 같이 개인정보에 대한 데이터베이스에 접근이 가능해지면 학생들은 학사정보 홈페이지에 접속하지 않고 챗봇으로 자신의 개인정보를 열람할 수 있다.
+○챗봇빌더를 캠퍼스뿐만 아니라 기업, 병원 등 단체에서도 사용할 수 있다. 정보가 통합되어 관리되고 최신 정보를 바로 업데이트 할 수 있기 때문에 획일성과 최신성을 갖출 수 있어 이는 기업,단체에 속한 직원들간의 정보 공유를 활성화 시킨다.
 
-○ 교육 매체로 활용 : 챗봇을 만드는데 관심이 있는 사람은 누구나 손쉽게 만들 수 있기 때문에 입문용으로 쳇봇의 원리를 간단히 이해하는데 매우 효과적이다.
+○챗봇 빌더의 개념이 생소한 사람에게 교육적 목적으로 쓰일 수 있으며 더 나아가 인공지능에 대한 기초를 세울 수 있다.
+
+
 ```
 
 ------
