--- a/documents/Output_Documents/공모전 지원서.md
+++ b/documents/Output_Documents/공모전 지원서.md
@@ -36,7 +36,8 @@
 #### 작품 특 장점
 
 ````
-
+- 직관적이고 사용자 친화적인 인터페이스 제공
+- 다수의 챗봇빌더 사용자 관리 가능
 ````
 
 #### 작품 기능
@@ -95,8 +96,7 @@
 
 
 ```
-
-- ‘스뮤고개’는 챗봇에 ‘텍스트’,  ‘리스트’,  ‘이미지’,  ‘동영상’과 같은 기능들을 템플릿 형태로 추가할 수 있다. '텍스트' 템플릿을 사용하고 싶다면, '텍스트'의 템플릿을 클릭하고 제목, 내용을 작성 후 저장을 누르면 챗봇이 구축된다. 이후 사용자가 제목에 해당하는 질문을 한다면, 내용에 해당하는 답변을 출력하게 된다. 
+‘스뮤고개’는 챗봇에 ‘텍스트’,  ‘리스트’,  ‘이미지’,  ‘동영상’과 같은 기능들을 템플릿 형태로 추가할 수 있다. '텍스트' 템플릿을 사용하고 싶다면, '텍스트'의 템플릿을 클릭하고 제목, 내용을 작성 후 저장을 누르면 챗봇이 구축된다. 이후 사용자가 제목에 해당하는 질문을 한다면, 내용에 해당하는 답변을 출력하게 된다. 
 '리스트'는 '텍스트'와 유사하지만 버튼을 추가로 입력할 수 있다. 그렇게 되면 사용자는 버튼 형식으로. 챗봇을 이용할 수 있게 된다. '이미지', '동영상'도 같은 방식으로 작동된다. 또한 템플릿에 해당하는 내용을 선으로 연결하게 되면, 시나리오 형식으로 진행할 수 있다. 
 - 국내에 존재하는 챗봇 빌더인 ’danbee.Ai’도 템플릿과 선으로 연결할 수 있는 기능을 제공하지만, 내용을 하려고 템플릿을 클릭하면, 다른 팝업 페이지가 생성되는 불편함을 가지고 있었지만, 스뮤고개 챗봇 빌더는 더 직관적인 UI제공하고, 템플릿을 클릭하여도 팝업 창 없이 바로 내용을 추가할 수 있는 편리함을 갖고 있다.
 - '스뮤고개'는 학생에게 특화된 챗봇 빌더로서 동아리, 총학생회, 학교 정보와 같이 큰 틀을 제공하여, 챗봇 빌더 사용자는 어느정도 챗봇이 구성되어 있는 상태로 '텍스트', '리스트', '이미지', '동영상'과 같은 기능을 활용하여 챗봇 제작을 시작하여 더 빠른 시일 내 챗봇을 제작할 수 있다.
@@ -141,7 +141,7 @@
 
 | 구분 |         기능          |                             설명                             | 진척도(%) |
 | :--: | :-------------------: | :----------------------------------------------------------: | :-------: |
-| S/W  |  회원가입 및 로그인   | 학교 메일을 통한 인증으로 회원가입과 로그인이 가능하다. (9월30일) |    80%    |
+| S/W  |  회원가입 및 로그인   | 학교 메일을 통한 인증으로 회원가입과 로그인이 가능하다. (9월30일) |   100%    |
 |      |       챗봇 생성       |         원하는 챗봇을 생성할 수 있는 기능(10월 15일)         |    30%    |
 |      | 회원정보 수정 및 탈퇴 |  자신의 개인정보를 수정하거나 탈퇴할 수있는 기능(9월 30일)   |    80%    |
 |      |       1:1 문의        |         개발자와 1:1 문의 할 수 있는 기능(9월 30일)          |    80%    |
@@ -158,16 +158,16 @@
 
 2-2 S/W 주요 기능
 
-|        기능        |                             설명                             | 작품실물사진 |
-| :----------------: | :----------------------------------------------------------: | :----------: |
-| 로그인 및 회원가입 |          인증을 위한 로그인 및 회원가입이 가능하다.          |              |
-|   챗봇 목록 검색   | 검색을 통해 원하는 챗봇을 찾거나, 유사한 챗봇이 있는지 확인할 수 있다. |              |
-| 챗봇 시나리오 제작 | 챗봇 시나리오를 플로우차트 형태로 만들어 시각적으로 보기 쉽게 제작할 수 있다. |              |
-|    템플릿 선택     | 기본 및 고급 템플릿을 자체적으로 제공하여 직관적으로 챗봇을 구축해나갈 수 있다. |              |
-|     챗봇 저장      | 제작중인 챗봇을 자동으로 저장을 해 두어 다음 실행 시 이어서 제작할 수 있다. |              |
-|      창작마당      |    사람들간에 자체적으로 만든 챗봇 구조를 공유할 수 있다.    |              |
-|       메세지       | 같은 챗봇 빌더를 사용하는 사람들간에 메세지를 주고 받을 수 있다. |              |
-|      1:1 문의      |      챗봇 빌더를 사용하면서 생기는 질문들을 할 수 있다.      |    이미지    |
+|        기능        |                             설명                             |       작품실물사진        |
+| :----------------: | :----------------------------------------------------------: | :-----------------------: |
+| 로그인 및 회원가입 |          인증을 위한 로그인 및 회원가입이 가능하다.          |  ![로그인](./login.png)   |
+|   챗봇 목록 검색   | 검색을 통해 원하는 챗봇을 찾거나, 유사한 챗봇이 있는지 확인할 수 있다. |    ![검색](search.png)    |
+| 챗봇 시나리오 제작 | 챗봇 시나리오를 플로우차트 형태로 만들어 시각적으로 보기 쉽게 제작할 수 있다. |  ![시나리오](./sina.png)  |
+|    템플릿 선택     | 기본 및 고급 템플릿을 자체적으로 제공하여 직관적으로 챗봇을 구축해나갈 수 있다. | ![템플릿](./templete.png) |
+|     챗봇 저장      | 제작중인 챗봇을 자동으로 저장을 해 두어 다음 실행 시 이어서 제작할 수 있다. |    ![저장](./save.png)    |
+|      창작마당      |    사람들간에 자체적으로 만든 챗봇 구조를 공유할 수 있다.    |                           |
+|       메세지       | 같은 챗봇 빌더를 사용하는 사람들간에 메세지를 주고 받을 수 있다. |                           |
+|      1:1 문의      |      챗봇 빌더를 사용하면서 생기는 질문들을 할 수 있다.      |                           |
 
 -------
 
