--- a/documents/Output_Documents/공모전 지원서.md
+++ b/documents/Output_Documents/공모전 지원서.md
@@ -96,16 +96,11 @@
 
 
 ```
-‘스뮤고개’는 챗봇에 ‘텍스트’,  ‘리스트’,  ‘이미지’,  ‘동영상’과 같은 기능들을 템플릿 형태로 추가할 수 있다. '텍스트' 템플릿을 사용하고 싶다면, '텍스트'의 템플릿을 클릭하고 제목, 내용을 작성 후 저장을 누르면 챗봇이 구축된다. 이후 사용자가 제목에 해당하는 질문을 한다면, 내용에 해당하는 답변을 출력하게 된다. 
-'리스트'는 '텍스트'와 유사하지만 버튼을 추가로 입력할 수 있다. 그렇게 되면 사용자는 버튼 형식으로. 챗봇을 이용할 수 있게 된다. '이미지', '동영상'도 같은 방식으로 작동된다. 또한 템플릿에 해당하는 내용을 선으로 연결하게 되면, 시나리오 형식으로 진행할 수 있다. 
-- 국내에 존재하는 챗봇 빌더인 ’danbee.Ai’도 템플릿과 선으로 연결할 수 있는 기능을 제공하지만, 내용을 하려고 템플릿을 클릭하면, 다른 팝업 페이지가 생성되는 불편함을 가지고 있었지만, 스뮤고개 챗봇 빌더는 더 직관적인 UI제공하고, 템플릿을 클릭하여도 팝업 창 없이 바로 내용을 추가할 수 있는 편리함을 갖고 있다.
-- '스뮤고개'는 학생에게 특화된 챗봇 빌더로서 동아리, 총학생회, 학교 정보와 같이 큰 틀을 제공하여, 챗봇 빌더 사용자는 어느정도 챗봇이 구성되어 있는 상태로 '텍스트', '리스트', '이미지', '동영상'과 같은 기능을 활용하여 챗봇 제작을 시작하여 더 빠른 시일 내 챗봇을 제작할 수 있다.
-- '스뮤고개'는 권한을 부여하여 여러 사람이 챗봇을 수정할 수 있는 기능을 제공한다. 예를 들어 동아리 관리자는 동아리 부분의 챗봇을 관리할 수 있고, 총학생회 관리자는 총학생회 챗봇을 관리함으로서 더 높은 챗봇의 정확도와 완성도를 제공한다. 이때 동아리 관리자는 총학생회 챗봇에 접근할 수 없다. 이렇게 되면 챗봇의 관리자가 바뀌더라도 자신의 영역만 신경쓰면 되기에 기존 학교 챗봇이 갖고 있었던, 유지 보수가 안된다는 단점을 극복할 수 있게 된다. 
-
-
-
-
-
+현재 국내에서 서비스중인 챗봇 빌더중 하나인 ’danbee.Ai’도 GUI를 통한 템플릿 기능을 제공하고 있지만,이는 템플릿의 이름 정보만 포함하고 있으며 실질적인 내용은 보여주지 않는다.
+이와 달리 '스뮤고개'는 시나리오 플로우차트 자체에서 템플릿의 내용을 관리할 수 있기에 챗봇빌더 사용자가 구성한 챗봇 빌더를 직관적으로 이해할 수 있다.
+또한 '스뮤고개'는 챗봇 빌더 사용자에게 권한을 부여하여 다수의 사용자가 챗봇을 관리할 수 있다.
+마지막으로 학생에게 특화된 챗봇 빌더로서 대학교내 단체들이 자주 사용하는 챗봇의 기능들을 추가적으로 템플릿 형태로 제공한다.
+이를 통해 챗봇 빌더 사용자는 바닥부터 챗봇 제작을 시작하지 않아도 필요한 템플릿 구조들을 이용해 더 빠르고 쉽게 챗봇을 구축할 수 있다.
 ```
 
 
